--- a/setup.cfg
+++ b/setup.cfg
@@ -30,9 +30,15 @@ include_package_data = true
 setup_requires =
     setuptools >=38.3.0
     pillow
+    ply
+    six
+    lesscpy
 
 install_requires =
     pillow
+    ply
+    six
+    lesscpy
 
 [bdist_wheel]
 universal = true
