--- a/setup.cfg
+++ b/setup.cfg
@@ -33,12 +33,24 @@ setup_requires =
     ply
     six
     lesscpy
+    libsass
+    coverage
+    coverage-enable-subprocess
+    pre-commit
+    pytest
+    werkzeug>=0.9
 
 install_requires =
     pillow
     ply
     six
     lesscpy
+    libsass
+    coverage
+    coverage-enable-subprocess
+    pre-commit
+    pytest
+    werkzeug>=0.9
 
 [bdist_wheel]
 universal = true
